# SE-week1-part2-

./: .gitignore  README.md
viikko1/nhl-statistics/: .coveragerc
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi/: .coveragerc  pyproject.toml
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: index.py  tulo.py
viikko2/nhl-reader/: .pre-commit-config.yaml  .pylintrc  index.py  player.py  player_reader.py  player_stats.py  pyproject.toml
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: pyproject.toml
viikko4/verkkokauppa/src/tests/: kauppa_test.py
