[project]
name = "nhl-reader"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav",email = "stas.kustov10@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "rich (>=14.3.2,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
