[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav",email = "stas.kustov10@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (==1.4.54)",
    "fastapi (>=0.129.0,<0.130.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
